feat: add admin-session for local env debug

--- a/.dev.vars.example
+++ b/.dev.vars.example
@@ -9,6 +9,7 @@ ENVIRONMENT=dev
 BETTER_AUTH_SECRET=your-secret-key-run-openssl-rand-hex-32
 BETTER_AUTH_URL=http://localhost:3000
 ADMIN_EMAIL=your-email@example.com
+ADMIN_TOKEN=dev-admin-token
 
 # --- GitHub OAuth ---
 GITHUB_CLIENT_ID=your-github-client-id
