feat: 添加 Effect-TS 基础设施和服务示例
- 添加 effect 依赖到 package.json
- 创建 src/lib/effect/ 目录，包含 Result 类型和错误定义
- 创建 src/services/ 目录，实现 Effect 版本的服务层 (CloudflareEnv, D1, KV, R2, DB, Auth)
- 添加 Effect 版本的 cache.service.effect.ts 和 posts.service.effect.ts 作为示例
- 更新 server.ts，在 requestContext 中添加 runtime 和 runEffect
- 更新 lib/hono/routes.ts，为每个请求创建 Effect Runtime

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
     "drizzle-zod": "^0.8.3",
+    "effect": "^3.19.18",
     "feed": "^5.2.0",
     "hono": "^4.10.8",
     "lucide-react": "^0.544.0",
