feat: add environment variable overrides for background settings

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,15 @@ VITE_BLOG_DESCRIPTION=一个基于 Cloudflare Workers 的博客
 VITE_BLOG_GITHUB=https://github.com/your-username
 VITE_BLOG_EMAIL=your-email@example.com
 
+# --- 背景图片配置 ---
+# VITE_BLOG_BACKGROUND_IMAGE_URL=/images/background.webp
+# VITE_BLOG_BACKGROUND_HOME_IMAGE_URL=/images/home-bg.webp
+# VITE_BLOG_BACKGROUND_OPACITY=20
+# VITE_BLOG_BACKGROUND_DARK_OPACITY=10
+# VITE_BLOG_BACKGROUND_BLUR=1
+# VITE_BLOG_BACKGROUND_OVERLAY_OPACITY=80
+# VITE_BLOG_BACKGROUND_TRANSITION_DURATION=600
+
 # --- Turnstile 人机验证（可选） ---
 # 测试key见：https://developers.cloudflare.com/turnstile/troubleshooting/testing/
 # VITE_TURNSTILE_SITE_KEY=your-turnstile-site-key
