feat: Implement a theme system and refactor the public home page to use the default theme components.
feat: 实现主题系统并重构公共首页以使用默认主题组件。

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,9 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@theme": ["./src/features/theme/themes/default"],
+      "@theme/*": ["./src/features/theme/themes/default/*"]
     },
     "types": ["vite/client", "@cloudflare/vitest-pool-workers"],
     "allowImportingTsExtensions": true,
