--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,30 +18,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Bun
+      - name: Setup Bun (固定版本，避免下载失败)
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          bun-version: 1.3.10  # 替换 latest 为具体版本，解决 socket hang up
+          # 移除 token 参数，官方 Bun 下载无需 token
 
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ~/.bun/install/cache
-          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lock') }}
+          key: ${{ runner.os }}-bun-${{ hashFiles('**/bun.lockb') }}  # 修正：bun 锁文件是 lockb 不是 lock
           restore-keys: |
             ${{ runner.os }}-bun-
 
-      - name: Install dependencies
-        run: bun ci
+      - name: Install dependencies (替换 bun ci 为标准命令)
+        run: bun install --frozen-lockfile  # bun ci 兼容性差，改用标准命令
 
       - name: Setup Wrangler Config
         run: cp wrangler.example.jsonc wrangler.jsonc
 
       - name: Lint Check
-        run: bun lint
+        run: bun run lint  # 补充 run，避免命令找不到（部分环境 bun lint 需加 run）
 
       - name: Type Check
-        run: bun tsc --noEmit
+        run: bun run tsc --noEmit  # 补充 run，统一命令格式
 
       - name: Run Tests
         run: bun run test
