feat: 部署工作流中添加 GITHUB_TOKEN 环境变量 / feat: Add GITHUB_TOKEN environment variable to deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -156,7 +156,8 @@ jobs:
             "UMAMI_API_KEY": "$UMAMI_API_KEY",
             "UMAMI_USERNAME": "$UMAMI_USERNAME",
             "UMAMI_PASSWORD": "$UMAMI_PASSWORD",
-            "TURNSTILE_SECRET_KEY": "$TURNSTILE_SECRET_KEY"
+            "TURNSTILE_SECRET_KEY": "$TURNSTILE_SECRET_KEY",
+            "GITHUB_TOKEN": "$GITHUB_TOKEN"
           }
           EOF
 
